--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -25,15 +25,6 @@
     justify-content: center;}
 }
 
-#locations {
-  display: -webkit-flex;
-  display: flex;
-  margin-bottom: 10px;
-  flex-wrap: wrap;
-  overflow-x: '';
-  align-items: center;
-  justify-content: center;}
-
 #up-link { 
   visibility: hidden;
   position: fixed;
